# LensorCompilerCollection

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  GlintDesign.org  HISTORY.org  LICENSE  README.org  TESTING.org  TODO.md  TODO.org  basic_fuzzer.el  codetests.sh  deps.org  dev.g  example  fact  glinttests.sh  grammar.bnf  isel-grammar.bnf  lcc.in.html  main  point  runtest.sh  templates.org  test.a68
editor/glint/glintd/: CMakeLists.txt  README.org  build.sh  glintd.py
editor/glint/glintd/src/: main.cpp
fmt-check-plugin/: CMakeLists.txt  fmt-check-plugin.cc
lib/glint/: CMakeLists.txt  IDEAS.org  TODO.2025.09.01.org  TODO.2025.09.17.org  TODO.2025.09.24.org  TODO.org  ast.cc  ast_deserialise_expr.cc  ast_deserialise_type.cc  ast_eval.cc  ast_module.cc  ast_printer.cc  ast_serialise_expr.cc  ast_serialise_type.cc  convert.cc  driver.cc  error_ids.cc  eval.cc  init.cc  ir_gen.cc  lexer.cc  parser.cc  sema.cc  sema_type.cc
lib/glint/src/: main.cpp
lib/glint/tests/: CMakeLists.txt  README.org  dev.g  main.cpp
lib/glint/tests/ast/: binary.txt  binary_precedence.txt  simple.txt  types.txt
lib/glint/tests/corpus/: binary.txt  binary_precedence.txt  calls.txt  match.txt  simple.txt
lib/glint/tests/corpus/ir/: parameters.txt
lib/glint/tests/corpus/semantic/: apply.txt  basic.txt  deproceduring.txt  dynamic_array.txt  outoforder_vardecl.txt  return_type_expression.txt  scopes.txt  sizeof.txt  template.txt  type_templates.txt  typeof.txt
lib/glint/tests/corpus/syntax/: associativity.txt  basic.txt  binary.txt  broken.txt  call.txt  cfor.txt  comment.txt  identifier.txt  identifier_escape.txt  if.txt  lambda.txt  lexer_macros.txt  module.txt  nothing.txt  numbers.txt  precedence.txt  template.txt  (+4 more)
lib/lcc/tests/x86_64/: CMakeLists.txt  main.cpp
tst/: CMakeLists.txt  README.org  codetests.sh  glinttests.sh  main.a68  main.cc  main.cpp  runtest.sh
tst/codetest/x86_64/: CMakeLists.txt  main.cpp
tst/codetest/x86_64/corpus/: identical_block_names.txt  parameters.txt  return_registers.txt
tst/intercept/: arbitrary_int_signed.int  arbitrary_int_toolarge.int  arbitrary_int_unsigned.int  array-copy.int  array-param.int  array_literals.int  array_reference.int  arrays.int  attribute-__noopt__.int  attribute-flatten.int  attribute-used.int  basic_references.int  basic_references2.int  basic_references3.int  bug_with_not_or_something.int  builtin-debugtrap.int  builtin-filename.int  builtin-line.int  builtin-memcpy.int  byte.int  byte2.int  bytearray.int  call-missing-arg.int  call-too-many.int  call_return_value_as_lvalue.int  cast.int  cast_equal.int  cast_from_incomplete.int  cast_reinterpret_aggregate.int  cast_s_ext.int  cast_to_incomplete.int  cast_z_ext.int  cmp_eq.int  cmp_ge.int  cmp_gt.int  cmp_le.int  cmp_lt.int  cmp_ne.int  comparisons.int  copy_arrays.int  (+61 more)
tst/intercept/ir/: enum.int  exit_code.int  function_parameter_to_variable.int  static_var.int
tst/ir/: roundtrip.lcc
tst/irtest/: CMakeLists.txt  README.org  main.cpp
tst/irtest/corpus/: crash001.lcc  instruction_combine.lcc  remove_unreachable.lcc  simple.lcc
tst/langtest/c/: CMakeLists.txt  main.cpp
tst/langtest/glint/: CMakeLists.txt  main.cpp
tst/langtest/glint/corpus/: match.txt  types.txt  warnings.txt
tst/laye/: cast_int.laye  cast_ptr.laye  cmp_eq.laye  cmp_ge.laye  cmp_gt.laye  cmp_le.laye  cmp_lt.laye  cmp_ne.laye  deref.laye  error_unions.laye  exit_code.laye  for.laye  foreign.laye  if.laye  math.laye  new.laye  new_simple.laye  node.laye  printf.laye  simple_alias.laye  simple_import.laye  simple_template.laye  string_literals.laye  struct_access.laye  struct_access_ref.laye  struct_advanced.laye  struct_foo.laye  variant_cast.laye  variant_foobar.laye  while.laye  xyzzy.laye
tst/laye/lib/: stdio.laye
tst/opt/: bug-0.lcc  cfgsimpl.lcc  domtree.lcc  global_dce.lcc  instcombine.lcc  sroa.lcc  ssa_construction.lcc  store_forwarding.lcc
tst/runtest/: .gitignore  glinttest53gGlv.g  runtest.el
tst/runtest/corpus/c/: basic_dereference_global.org  external_call.org  internal_call.org  simple.org
tst/runtest/corpus/glint/: bad_sum_access.org  break_simple.org  bug001.org  bug002.org  continue_simple.org  default_init_struct_member_dynamic_array.org  dynamic_array_append_fixarray.org  dynamic_array_insert_fixarray.org  early_return.org  euclid_gcd.org  fibonacci.org  implicit_integer_return_toplevel.org  import_as.org  import_dynamic_array_export.org  import_dynarray_byte_fudged_function_export.org  import_dynarray_byte_function_export.org  import_empty_module.org  import_enum_export.org  import_fixed_array_export.org  import_int_function_export.org  import_intintint_function_export.org  import_module_as_export.org  import_module_export.org  import_simple_export.org  import_simple_function_export.org  import_single_arg_function_export.org  import_stringliteral_export.org  import_struct_export.org  import_union_export.org  import_view_of_dynamic_array_export.org  import_void_function_export.org  import_voidint_function_export.org  lambda.org  ohboy2.org  outoforder001.org  print_enum_failure.org  recursive_data.org  serialisation.TODO.org  serialisation_alignof.org  serialisation_binary.org  (+32 more)
tst/runtest/corpus/ir/: opt_constfold_add.org  spill_alot.org
tst/tests/: arbitrary_int_signed.int  arbitrary_int_unsigned.int  array-copy.int  array-param.int  array-param.un  array_literals.int  array_reference.int  arrays.int  arrays.un  attribute-__noopt__.int  attribute-flatten.int  attribute-used.int  basic_references.int  basic_references2.int  basic_references3.int  bug_with_not_or_something.int  byte.int  byte.un  byte2.un  bytearray.int  call-missing-arg.int  call-missing-arg.un  call-too-many.int  call-too-many.un  call_return_value_as_lvalue.int  cast.un  cast_equal.int  cast_from_incomplete.int  cast_reinterpret_aggregate.int  cast_s_ext.int  cast_to_incomplete.un  cast_z_ext.int  cmp_gt.int  cmp_le.int  cmp_lt.int  comparisons.int  comparisons.un  copy_arrays.int  copy_arrays.un  copy_structs.int  (+119 more)
tst/vew/: CMakeLists.txt  README.org  main.cpp
(+724 files in other folders)
